--- a/Pipfile
+++ b/Pipfile
@@ -33,6 +33,7 @@ Django = "==2.0.7"
 Werkzeug = "==0.14.1"
 Sphinx = "==1.7.6"
 requests = "*"
+django-taggit = "*"
 
 [requires]
 python_version = "3.7"
